--- a/source/scss/_variables.base.scss
+++ b/source/scss/_variables.base.scss
@@ -1,16 +1,8 @@
-/*
-  System font stack used as base sans-serif and monospace
-  https://css-tricks.com/snippets/css/system-font-stack/
-*/
-$font-serif-family:
-  system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica,
-  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-mono-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
 /*
   Themes fonts
 */
-$font-base-family: $font-serif-family;
+$font-base-family: "Segoe UI";
 
 /*
 * Breakpoints
@@ -24,5 +16,5 @@ $media-desktop: 1200px;
 * Colors
 */
 
-$color-bg: #fff;
-$color-text: #151515;
+$color-bg: #6725A8;
+$color-text: #000000;
