--- a/source/scss/_blocks/container.scss
+++ b/source/scss/_blocks/container.scss
@@ -1,4 +1,14 @@
 .container {
   max-width: 1400px;
   margin: 0 auto;
+
+  @media (max-width: 1399px) {
+    max-width: 1024px;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 1023px) {
+    max-width: 320px;
+    margin: 0 auto;
+  }
 }
