--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -28,6 +28,14 @@
     margin-bottom: 40px;
     margin-left: 24px;
     margin-right: 24px;
+
+    @media (max-width: 1023px) {
+      margin-top: 13px;
+      margin-bottom: 40px;
+      margin-left: 13px;
+      margin-right: 13px;
+      justify-content: space-between;
+    }
   }
 
   &::after {
@@ -37,15 +45,24 @@
     height: 24px;
     border-radius: 24px 24px 0 0;
     position: absolute;
-    top: 88px;
+    top: 89px;
     left: 0;
     background-color: #f6f6f9;
+
+    @media (max-width: 1023px) {
+      top: 56px;
+    }
   }
 
   &__nav {
     width: 170px;
     display: flex;
     margin-right: 32px;
+
+    @media (max-width: 1023px) {
+      margin: 0;
+      width: max-content;
+    }
   }
 
   &__logo {
@@ -55,7 +72,13 @@
     color: #FFFFFF;
     width: 108px;
     text-transform: uppercase;
-    letter-spacing: 0.5px;
+    letter-spacing: .5px;
+
+    @media (max-width: 1023px) {
+      font-size: 20px;
+      width: 212px;
+      letter-spacing: 2px;
+    }
   }
 
   &__button {
@@ -67,6 +90,14 @@
     width: 48px;
     height: 48px;
     transition: .3s ease;
+
+    @media (max-width: 1023px) {
+      border: none;
+      padding: 13px 3px;
+      width: 26.5px;
+      height: 18.5px;
+      margin-right: 23px;
+    }
 
     &:hover {
       border: 1px solid #FFFFFF;
@@ -81,6 +112,11 @@
     background: #fff;
     border-radius: 4px;
 
+    @media (max-width: 1023px) {
+      width: 22.5px;
+      height: 2px;
+    }
+
     &::before {
       top: -10px;
       content: '';
@@ -91,6 +127,10 @@
       display: block;
       background: #fff;
       border-radius: 4px;
+
+      @media (max-width: 1023px) {
+        top: -7px;
+      }
     }
 
     &::after {
@@ -103,6 +143,10 @@
       display: block;
       background: #fff;
       border-radius: 4px;
+
+      @media (max-width: 1023px) {
+        bottom: -7px;
+      }
     }
   }
 
@@ -110,6 +154,11 @@
     position: relative;
     width: 100%;
     margin-right: 28px;
+
+    @media (max-width: 1023px) {
+      margin: 0;
+      width: 28px;
+    }
   }
 
   &__input {
@@ -125,6 +174,10 @@
     background: rgba(255,255,255, .2);
     cursor: pointer;
     transition: .3s ease 0s;
+
+    @media (max-width: 1023px) {
+      display: none;
+    }
 
     &::placeholder {
       color: rgba(255, 255, 255, 0.5);
@@ -150,6 +203,13 @@
     cursor: pointer;
     transition: .3s ease;
 
+    @media (max-width: 1023px) {
+      left: 4px;
+      top: 5px;
+      right: 0;
+      opacity: 1;
+    }
+
     &:hover {
       opacity: 1;
     }
@@ -161,6 +221,10 @@
     left: 5px;
     display: flex;
     gap: 40px;
+
+    @media (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__link {
@@ -171,6 +235,10 @@
     transition: .3s ease;
     display: block;
     text-align: center;
+
+    @media (max-width: 1023px) {
+      display: none;
+    }
 
     &:hover {
       color: #FFFFFF;
@@ -209,11 +277,21 @@
     display: flex;
     flex-direction: row;
     gap: 32px;
+
+    @media (max-width: 1023px) {
+      flex-direction: column;
+      gap: 0;
+    }
   }
 
   &__wrapper {
     height: max-content;
     margin-left: 24px;
+
+    @media (max-width: 1023px) {
+      margin: 0 auto;
+      margin-top: -8px;
+    }
   }
 }
 
@@ -221,8 +299,21 @@
   width: 891px;
   margin-top: 10px;
 
+  @media (max-width: 1399px) {
+    width: 640px;
+  }
+
+  @media (max-width: 1023px) {
+    margin: 0;
+    width: 288px;
+  }
+
   &__product {
     margin-bottom: 37.5px;
+
+    @media (max-width: 1023px) {
+      margin-bottom: 48px;
+    }
   }
 
   &__list-wrapper {
@@ -235,6 +326,12 @@
     line-height: 36px;
     font-weight: 700;
     margin-bottom: 27px;
+
+    @media (max-width: 1023px) {
+      font-size: 20px;
+      line-height: 28px;
+      margin-bottom: 16px;
+    }
   }
 
   &__wrapperButton {
@@ -257,6 +354,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 32px;
+
+    @media (max-width: 1023px) {
+      row-gap: 10px;
+    }
   }
 
   &__input {
@@ -302,23 +403,60 @@
     height: 100%;
     display: flex;
 
+    @media (max-width: 1023px) {
+      padding-bottom: 18px;
+      width: 288px;
+      border-bottom: 1px solid rgba(0,0,0,.1);
+    }
+
+    &:nth-child(5n-2) {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+
     &-unit {
       font-size: 16px;
       line-height: 24px;
     }
   }
 
+  &__list-item {
+    @media (max-width: 1023px) {
+      width: 288px;
+    }
+  }
+
   &__list-info {
     display: flex;
+
+    @media (max-width: 1023px) {
+      flex-wrap: wrap;
+      position: relative;
+    }
   }
 
   &__list-img {
     margin-right: 17px;
+
+    @media (max-width: 1023px) {
+      margin-right: 16px;
+      margin-bottom: 12px;
+    }
   }
 
   &__list-text {
     width: 252px;
     margin-right: 292px;
+
+    @media (max-width: 1399px) {
+      margin-right: 40px;
+    }
+
+    @media (max-width: 1023px) {
+      margin-right: 0;
+      width: 192px;
+      margin-top: 29px;
+    }
   }
 
   &__list-name {
@@ -326,6 +464,17 @@
     line-height: 24px;
     font-weight: 400;
     margin-bottom: 5px;
+
+    @media (max-width: 1023px) {
+      font-size: 14px;
+      line-height: 20px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      word-wrap: break-word;
+      max-height: 40px;
+    }
   }
 
   &__list-characteristic {
@@ -340,6 +489,10 @@
     line-height: 16px;
     font-weight: 400;
     color: #9797AF;
+
+    @media (max-width: 1023px) {
+      margin-bottom: 12px;
+    }
   }
 
   &__list-provider {
@@ -347,6 +500,20 @@
     line-height: 16px;
     font-weight: 400;
     color: #9797AF;
+
+    @media (max-width: 1023px) {
+      display: none;
+    }
+  }
+
+  &__list-count {
+    @media (max-width: 1023px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 16px;
+      width: 279px;
+    }
   }
 
   &__list-price {
@@ -357,12 +524,25 @@
     flex-direction: column;
     align-items: end;
     gap: 5px;
+
+    @media (max-width: 1023px) {
+      flex-direction: row;
+      width: 193px;
+      position: absolute;
+      margin-left: 96px;
+      margin-top: 7px;
+    }
   }
 
   &__list-newPrice {
     font-size: 20px;
     line-height: 28px;
     font-weight: 700;
+
+    @media (max-width: 1023px) {
+      font-size: 16px;
+      line-height: 24px;
+    }
   }
 
   &__list-oldPrice {
@@ -372,6 +552,13 @@
     text-decoration: line-through;
     border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
     width: max-content;
+  }
+}
+
+.mobileCheckbox {
+  @media (max-width: 1023px) {
+    position: absolute;
+    z-index: 10;
   }
 }
 
@@ -399,6 +586,12 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 1023px) {
+    margin: 0;
+    width: 80px;
+    height: 32px;
+  }
 
   &__btnPlus {
     background: none;
@@ -456,6 +649,10 @@
       display: block;
       left: calc(50% - 6px);
       position: absolute;
+
+      @media (max-width: 1023px) {
+        left: 50%;
+      }
     }
   }
 }
@@ -466,6 +663,11 @@
   line-height: 16px;
   font-weight: 400;
   margin-bottom: 10px;
+
+  @media (max-width: 1023px) {
+    margin: 0;
+    margin-right: 13px;
+  }
 }
 
 .icon {
@@ -475,6 +677,11 @@
   gap: 18px;
   margin-right: 14px;
 
+  @media (max-width: 1023px) {
+    margin: 0;
+    gap: 26px;
+  }
+
   &__like {
     background-image: url(../img/like.svg);
     width: 20px;
@@ -483,6 +690,10 @@
     border: none;
     background-color: transparent;
     opacity: .5;
+
+    @media (max-width: 1023px) {
+      background-position-y: 3px;
+    }
 
     &:hover {
       opacity: 1;
@@ -498,6 +709,10 @@
     background-color: transparent;
     opacity: .5;
 
+    @media (max-width: 1023px) {
+      background-position-y: 3px;
+    }
+
     &:hover {
       opacity: 1;
     }
@@ -511,10 +726,19 @@
 
 .marginCheckbox {
   margin-top: 37.5px;
+
+  @media (max-width: 1023px) {
+    margin-top: 4px;
+    margin-left: 4px;
+  }
 }
 
 .absent {
   margin-bottom: 40px;
+
+  @media (max-width: 1023px) {
+    margin-bottom: 32px;
+  }
 
   &__wrapper {
     display: flex;
@@ -534,19 +758,44 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
+
+    @media (max-width: 1023px) {
+      gap: 11px;
+    }
+  }
+
+  &__list {
+    @media (max-width: 1023px) {
+      border-bottom: 1px solid rgba(0,0,0,.1);
+      padding-bottom: 22px;
+    }
   }
 
   &__list:nth-child(5n-2) {
     margin-top: -5px;
+
+    @media (max-width: 1023px) {
+      margin-top: 0px;
+      border-bottom: none;
+      padding-bottom: 0;
+    }
   }
 
   &__list-info {
     display: flex;
+
+    @media (max-width: 1023px) {
+      flex-wrap: wrap;
+    }
   }
 
   &__list-wrapper {
     display: flex;
     flex-direction: row;
+
+    @media (max-width: 1023px) {
+      margin-bottom: 12px;
+    }
   }
 
   &__list-img {
@@ -556,6 +805,15 @@
   &__list-text {
     width: 285px;
     margin-right: 292px;
+
+    @media (max-width: 1399px) {
+      margin-right: 85px;
+    }
+
+    @media (max-width: 1023px) {
+      width: 192px;
+      margin-right: 0;
+    }
   }
 
   &__list-name {
@@ -563,6 +821,19 @@
     line-height: 24px;
     font-weight: 400;
     margin-bottom: 7px;
+
+    @media (max-width: 1023px) {
+      font-size: 14px;
+      line-height: 20px;
+      font-size: 14px;
+      line-height: 20px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      word-wrap: break-word;
+      max-height: 40px;
+    }
   }
 
   &__list-characteristic {
@@ -577,10 +848,25 @@
   margin: 0;
 }
 
+.mobileIcon {
+  @media (max-width: 1023px) {
+
+  }
+}
+
 .paddingProduct {
   display: flex;
   width: 767px;
   justify-content: space-between;
+
+  @media (max-width: 1399px) {
+    justify-content: start;
+  }
+
+  @media (max-width: 1023px) {
+    width: 288px;
+    justify-content: end;
+  }
 }
 
 .colorImg {
@@ -598,22 +884,45 @@
   width: 891px;
   margin-bottom: 16px;
 
+  @media (max-width: 1399px) {
+    width: 638px;
+  }
+
+  @media (max-width: 1023px) {
+    width: 320px;
+    padding: 19px 16px 24px 16px;
+    margin-left: -16px;
+  }
+
   &__header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 16px;
+
+    @media (max-width: 1023px) {
+      margin-bottom: 12px;
+    }
   }
 
   &__title {
     font-weight: 700;
     font-size: 24px;
     line-height: 32px;
+
+    @media (max-width: 1023px) {
+      font-size: 20px;
+      line-height: 24px;
+    }
   }
 
   &__address {
     display: flex;
     flex-direction: row;
+
+    @media (max-width: 1023px) {
+      flex-direction: column;
+    }
 
     &-wrapper {
       display: flex;
@@ -657,10 +966,25 @@
 
   &__price {
     margin-bottom: 16px;
+
+    @media (max-width: 1023px) {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 12px;
+    }
   }
 
   &__priceShipping {
     display: flex;
+
+    @media (max-width: 1399px) {
+      gap: 8px;
+    }
+
+    @media (max-width: 1023px) {
+      gap: 2px;
+      margin-top: 29px;
+    }
 
     &-text {
       font-weight: 400;
@@ -668,11 +992,23 @@
       line-height: 16px;
       margin-left: 3px;
       margin-top: 2px;
+
+      @media (max-width: 1023px) {
+        margin: 0;
+        margin-top: -5px;
+        width: 242px;
+      }
     }
   }
 
   &__date {
     display: flex;
+
+    @media (max-width: 1023px) {
+      flex-direction: column;
+      gap: 12px;
+      margin-bottom: 8px;
+    }
   }
 
   &__img {
@@ -690,6 +1026,10 @@
     width: 41px;
     height: 56px;
     margin-bottom: 24px;
+
+    @media (max-width: 1023px) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -701,6 +1041,24 @@
     display: inline-block;
     background-repeat: no-repeat;
     background-position: center;
+
+    @media (max-width: 1399px) {
+      width: 35px;
+    }
+
+    @media (max-width: 1023px) {
+      margin-left: 2px;
+    }
+}
+
+.transferLine {
+  @media (max-width: 1399px) {
+    display: inline-block;
+  }
+
+  @media (max-width: 1023px) {
+    display: inline;
+  }
 }
 
 .deliveryColorText {
@@ -716,6 +1074,11 @@
   line-height: 24px;
   color: #CB11AB;
   margin-top: 5px;
+
+  @media (max-width: 1023px) {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .marginButtonChange {
@@ -729,6 +1092,16 @@
   width: 891px;
   margin-bottom: 16px;
 
+  @media (max-width: 1399px) {
+    width: 638px;
+  }
+
+  @media (max-width: 1023px) {
+    width: 320px;
+    margin-left: -16px;
+    padding: 14px 16px 24px 16px;
+  }
+
   &__header {
     display: flex;
     flex-direction: row;
@@ -740,6 +1113,12 @@
     font-size: 24px;
     line-height: 32px;
     margin-bottom: 16px;
+
+    @media (max-width: 1023px) {
+      font-size: 20px;
+      line-height: 24px;
+      margin-bottom: 10px;
+    }
   }
 
   &__card {
@@ -773,17 +1152,38 @@
   width: 891px;
   margin-bottom: 26px;
 
+  @media (max-width: 1399px) {
+    width: 638px;
+  }
+
+  @media (max-width: 1023px) {
+    width: 320px;
+    margin-left: -16px;
+    padding: 14px 16px 38px 16px;
+    margin-bottom: 0;
+  }
+
   &__title {
     font-weight: 700;
     font-size: 24px;
     line-height: 32px;
     margin-bottom: 35px;
+
+    @media (max-width: 1023px) {
+      font-size: 20px;
+      line-height: 24px;
+      margin-bottom: 26px;
+    }
   }
 
   &__form {
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    @media (max-width: 1023px) {
+      gap: 48px;
+    }
   }
 
   &__wrapper {
@@ -791,6 +1191,11 @@
     flex-direction: row;
     align-items: end;
     gap: 24px;
+
+    @media (max-width: 1023px) {
+      flex-direction: column;
+      gap: 48px;
+    }
 
     &-custom {
       display: flex;
@@ -800,6 +1205,10 @@
     &-phone {
       display: flex;
       flex-direction: column;
+
+      @media (max-width: 1023px) {
+        margin-top: -21px;
+      }
     }
   }
 
@@ -812,11 +1221,19 @@
   }
 
   &__input {
-    min-width: 218px;
+    width: 218px;
     height: 24px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 5px;
+
+    @media (max-width: 1399px) {
+      width: 180px;
+    }
+
+    @media (max-width: 1023px) {
+      width: 288px;
+    }
 
     &::placeholder {
       font-weight: 400;
@@ -837,6 +1254,10 @@
 
 .inputWidth {
   width: 338px;
+
+  @media (max-width: 1023px) {
+    width: 288px;
+  }
 }
 
 .summary {
@@ -844,10 +1265,21 @@
   padding: 16px 24px 24px 24px;
   border-radius: 16px;
   width: 429px;
-  height: 572px;
+  height: max-content;
   z-index: 10;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.09);
   margin-top: -2px;
+
+  @media (max-width: 1399px) {
+    width: 303px;
+  }
+
+  @media (max-width: 1023px) {
+    width: 320px;
+    background-color: #F6F6FA;
+    box-shadow: none;
+    padding: 30px 16px 20px 16px;
+  }
 
   &__header {
     display: flex;
@@ -859,6 +1291,11 @@
     font-size: 24px;
     line-height: 32px;
 
+    @media (max-width: 1023px) {
+      font-size: 20px;
+      line-height: 24px;
+    }
+
     &-unit {
       font-size: 20px;
       line-height: 28px;
@@ -868,6 +1305,11 @@
   &__info {
     margin-top: 8px;
     margin-bottom: 24px;
+
+    @media (max-width: 1023px) {
+      margin-top: 5px;
+      margin-bottom: 17px;
+    }
 
     &-price {
       display: flex;
@@ -905,6 +1347,10 @@
     flex-direction: column;
     gap: 4px;
     margin-bottom: 12px;
+
+    @media (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__subtitle {
@@ -922,6 +1368,15 @@
     align-items: center;
     gap: 6px;
     margin-bottom: 24px;
+
+    @media (max-width: 1399px) {
+      gap: 10px;
+    }
+
+    @media (max-width: 1023px) {
+      gap: 6px;
+      margin-bottom: 13px;
+    }
   }
 
   &__payment {
@@ -929,6 +1384,10 @@
     flex-direction: column;
     gap: 4px;
     margin-bottom: 13px;
+
+    @media (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__checkbox {
@@ -981,6 +1440,13 @@
       width: 16px;
       height: 32px;
       margin-right: 8px;
+
+      @media (max-width: 1399px) {
+        margin-right: 5px;
+      }
+    }
+    @media (max-width: 1399px) {
+      justify-content: start;
     }
   }
 
@@ -1042,10 +1508,28 @@
   }
 }
 
+.widthAgreement {
+  @media (max-width: 1399px) {
+    width: 217px;
+  }
+
+  @media (max-width: 1023px) {
+    width: 235px;
+  }
+}
+
 .colorTextPink {
   color: #CB11AB;
   border-bottom: 1px dashed rgba(203, 17, 171, 0.2);
   width: 47px;
+}
+
+.sizeIcon {
+  width: 20px;
+
+  @media (max-width: 1023px) {
+    width: 35px;
+  }
 }
 
 .borderBottom {
@@ -1080,6 +1564,10 @@
   display: flex;
   justify-content: center;
 
+  @media (max-width: 1023px) {
+    padding-bottom: 56px;
+  }
+
   &::before {
     content: "";
     display: block;
@@ -1097,5 +1585,89 @@
     line-height: 16px;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.7);
+
+    @media (max-width: 1023px) {
+      height: 40px;
+    }
   }
 }
+
+/*
+  mobileMenu
+*/
+
+.mobileMenu {
+  display: none;
+
+  @media (max-width: 1023px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 38.5px;
+    position: fixed;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 56px;
+    bottom: 0;
+    z-index: 100;
+    box-shadow: 0 4px 20px rgba(0,0,0,.1);
+  }
+
+  &__link {
+    @media (max-width: 1023px) {
+      width: 28px;
+      height: 28px;
+    }
+
+    &-home {
+      @media (max-width: 1023px) {
+        display: block;
+        background-image: url(../img/home.svg);
+        background-repeat: no-repeat;
+        width: 28px;
+        height: 28px;
+      }
+    }
+
+    &-catalog {
+      @media (max-width: 1023px) {
+        display: block;
+        background-image: url(../img/catalog.svg);
+        background-repeat: no-repeat;
+        width: 28px;
+        height: 28px;
+      }
+    }
+
+    &-basket {
+      @media (max-width: 1023px) {
+        display: block;
+        background-image: url(../img/basket320.svg);
+        background-repeat: no-repeat;
+        width: 28px;
+        height: 28px;
+      }
+    }
+
+    &-favorites {
+      @media (max-width: 1023px) {
+        display: block;
+        background-image: url(../img/favorites.svg);
+        background-repeat: no-repeat;
+        width: 28px;
+        height: 28px;
+      }
+    }
+
+    &-profile {
+      @media (max-width: 1023px) {
+        display: block;
+        background-image: url(../img/profile320.svg);
+        background-repeat: no-repeat;
+        width: 28px;
+        height: 28px;
+      }
+    }
+  }
+}
+
